--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   { "express" : "2.5.4"
   , "jade" : "0.20.x"
   , "stylus" : "0.22.x"
+  , "connect-redis" : "1.x"
   , "node-markdown" : "0.1.x"
   }
 , "main" : "./server.js"
